--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
   </head>
   <body>
+  
 	<script src="js/accessibility.min.js"></script>
     <script src="js/accessibility.dom.min.js"></script>
     <script src="js/canvas.js"></script>
-  
 
-</body></html>
+  </body>
+</html>
