--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   
-    <title>Noughts and Crosses using Canvas</title>
+    <title>Noughts and Crosses</title>
     
     <meta charset="utf-8">
     <link type="text/css" href="core.css" rel="stylesheet">
