commit: new changes after stash pop
Change-Id: Idcb56f2c9a1849f49105bec2e674df8ab8ff829b

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
   
-    <title>Noughts and Crosses Test 12 after stash</title>
+
+    <title>Noughts and Crosses Test 100</title>
     
     <meta charset="utf-8">
     <link type="text/css" href="core.css" rel="stylesheet">
